routine style update

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/chu-custom.css">
 
+    
+<script type="text/javascript">
+    var timerStart = Date.now();
+</script>
 <!--statistics-->
-    <!--
+<!--
 <script>
     var _hmt = _hmt || [];
     (function() {
@@ -25,10 +29,8 @@
       var s = document.getElementsByTagName("script")[0]; 
       s.parentNode.insertBefore(hm, s);
     })();
-</script>-->
-    <script type="text/javascript">
-            var timerStart = Date.now();
-        </script>
+</script>
+-->
 </head>
 
 <body id="pageTop"><!-- onload="bodyLoaded()" -->
@@ -75,7 +77,7 @@
                       <div class="row slider-item">
                       	<div class="td-inner">
                       		<div class="td-color td-b"></div>
-                            <a href="#sec3" class="local-scroll"><img src="imgs/icons/portfolio.png"><div class="td-words">Portfolio</div></a>
+                            <a href="#sec4" class="local-scroll"><img src="imgs/icons/portfolio.png"><div class="td-words">Portfolio</div></a>
                         </div>
                       </div>
                       <div class="row slider-item">
@@ -477,7 +479,7 @@
     -->
     
     <footer>
-    	<div>© Copyright&nbsp;&nbsp;2016 - 2017&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Chu, Tianxin</div>
+    	<div>v1.194.17 &nbsp;© Copyright 2016 - 2017 &nbsp;Chu, Tianxin</div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
