--- a/index.html
+++ b/index.html
@@ -1,36 +1,48 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Tianxin's Homepage">
-<meta name="keywords" content="tianxin, chu, portfolio, single page, one page, interactive, creative, html5, css3, css3 animation, jquery">
-<meta name="author" content="Tianxin Chu">
-<title>Tianxin's Homepage</title>
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<link rel="icon" href="imgs/icons/icon.png">
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
-<link rel="stylesheet" href="css/animate.css">
-<link rel="stylesheet" href="css/chu-custom.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Tianxin's Homepage">
+    <meta name="keywords" content="tianxin, chu, portfolio, single page, one page, interactive, creative, html5, css3, css3 animation, jquery">
+    <meta name="author" content="Tianxin Chu">
+    <title>Tianxin's Homepage</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" href="imgs/icons/icon.png">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/chu-custom.css">
 
-    
-<script type="text/javascript">
-    var timerStart = Date.now();
-</script>
-<!--statistics-->
-<!--
-<script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "//hm.baidu.com/hm.js?6c994550f153fa9b1dd3c2d02b202fc6";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
-</script>
--->
+        
+    <script type="text/javascript">
+        var timerStart = Date.now();
+    </script>
+    <!--statistics-->
+    <!-- baidu
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+        var hm = document.createElement("script");
+        hm.src = "//hm.baidu.com/hm.js?6c994550f153fa9b1dd3c2d02b202fc6";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+    -->
+    <!-- google analytics -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-105340083-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body id="pageTop"><!-- onload="bodyLoaded()" -->
