added description for search

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Tianxin's Homepage">
+    <meta name="description" content="Welcome to Tianxin Chu's Homepage! Click in and take a look at my work and experience. If you are a recruiter, a university admission officer or you simply wish to know me, you can find my contact information here to0. I am more than happy to chat!">
     <meta name="keywords" content="tianxin, chu, portfolio, single page, one page, interactive, creative, html5, css3, css3 animation, jquery">
     <meta name="author" content="Tianxin Chu">
-    <title>Tianxin's Homepage</title>
+    <title>Tianxin Chu's Homepage</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="icon" href="imgs/icons/icon.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
