--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <div class="row bottomRow">                
                 <div class="self-intro col-md-8 wow fadeInLeft-light" data-wow-delay="0.3s">
                     <p><span>I</span> am pursuing a career within the scope of web programming(full stack) and interactive computing/UX research. My strength is front end development and prototyping. Meanwhile I am always learning and would love to explore new technology fields.</p>
-                    <p><span>A</span>t the moment, I am open to positions in <i class="location-highlight">Seattle, WA</i>. My availability starts at 1/1/2018. Please contact me by your favorite way at your best convenience if you are interested in chatting. </p>
+                    <p><span>A</span>t the moment, I am open to <i class="location-highlight">2018 summer internship</i> positions. Please contact me if you are interested in talking about potential job openings.</p>
                 </div>
                 <div class="contact-details-wrapper col-md-4 wow fadeInRight-light" data-wow-delay="0.3s">
 					<address class="contact-details">			
