--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <div class="row bottomRow">                
                 <div class="self-intro col-md-8 wow fadeInLeft-light" data-wow-delay="0.3s">
                     <p><span>I</span> am pursuing a career within the scope of web programming(full stack) and interactive computing/UX research. My strength is front end development and prototyping. Meanwhile I am always learning and would love to explore new technology fields.</p>
-                    <p><span>A</span>t the moment, I am open to <i class="location-highlight">2018 summer internship</i> positions. Please contact me if you are interested in talking about potential job openings.</p>
+                    <p><span>A</span>t the moment, I am considering pursuing a degree starting next year. So I am open to <i class="location-highlight">2018 summer internship</i> positions. Meanwhile, if you believe a full-time opportunity strongly fits my skill set, I am flexible with my schedule. In any case, I would love to talk to you more about it. Looking forward to hearing from you!</p>
                 </div>
                 <div class="contact-details-wrapper col-md-4 wow fadeInRight-light" data-wow-delay="0.3s">
 					<address class="contact-details">			
@@ -491,7 +491,7 @@
     -->
     
     <footer>
-    	<div>v1.194.17 &nbsp;© Copyright 2016 - 2017 &nbsp;Chu, Tianxin</div>
+    	<div>v1.46.17 &nbsp;© Copyright 2016 - 2017 &nbsp;Chu, Tianxin</div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
