routing verbal update

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="aboutright-inner text-center">
 				  	<div class="clearfix wow fadeInUp" data-wow-delay="0.3s">
 						<span>An Open-minded Coder and Team Player</span>
-						<p>I am a detail oriented person who is able to demonstrates exquisite front end products that precisely expresses design language with easily reusable code. I put efforts in transferring design thinking to the software engineering process, especially in time management and workload distribution management.</p>
+						<p>I am a detail oriented person who is able to demonstrates exquisite front end products that precisely expresses design language with reusable code. I put efforts in transferring design thinking to the software engineering process through fast prototyping and efficient communication between designers and developers.</p>
 					</div>
 				</div>
                 <i class="fa fa-chevron-up aboutright-up-icon" aria-hidden="true"></i>
