added two new projects

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         	<img id="chu-logo" src="imgs/icons/chu-logo.png" alt="Loading Logo...">
             <div id="hand"><img src="imgs/icons/hand.png" alt="Loading hand..."></div>
             <img id="smile3" src="imgs/icons/smile.png" alt="Loading smile...">
-            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe" data-toggle="tooltip" data-placement="bottom" title="Now at SIEMENS Corp.">Front End Engineer&nbsp;</span>FROM<span class="sec1-p-span" id="uiux" data-toggle="tooltip" data-placement="bottom" title="University of Pittsburgh">&nbsp;PITT</span></p>
+            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe" data-toggle="tooltip" data-placement="bottom" title="Now at SIEMENS Corp.">Front End Engineer&nbsp;</span>FROM<span class="sec1-p-span" id="uiux" data-toggle="tooltip" data-placement="bottom" title="@ Mountain View, CA">&nbsp;CMU</span></p>
         </div>
         <div class="arrow_box"></div>
     </section>
@@ -287,7 +287,7 @@
 									<i class="fa"><img src="imgs/icons/software.png" class="skillimg" alt=""></i>
 								</div>
 								<h3>General Purpose</h3>
-								<p>Java, C/C#, Python</p>
+								<p>Python，Java, C/C#</p>
 							</div>
 						</div>
 					
@@ -319,6 +319,28 @@
               <p class="wow animated fadeInUp-light">Code & Outcome Snaps</p>
               <div class="row text-center" id="portfolio1">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
+                	<h3><strong>Python, R</strong></h3>
+                    <p>Moviemotion - A research project...</p>
+                    <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button>
+                </div>
+                <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
+                	<img class="pimg-code" src="imgs/portfolio/hololens.jpg" alt="Loading Moviemotion...">
+                    <img class="pimg" src="imgs/portfolio/hololens1.gif" alt="Loading Moviemotion...">
+                </div>
+              </div>
+              <div class="row text-center" id="portfolio2">
+                <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
+                	<img class="pimg-code" src="imgs/portfolio/casey-code.png" alt="Loading Casey...">
+                	<img class="pimg" src="imgs/portfolio/casey0.png" alt="Loading Casey...">
+                </div>
+                <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
+                	<h3><strong>Chrome Extension, Node/Express, MongoDB Atlas</strong></h3>
+                    <p>Casey - job application assistant software package.</p>
+                    <a class="btn btn1 btn2" href="https://www.xinbeihu.com/jet-hackathon" target="_blank">Read More</a>
+                </div>
+              </div>
+              <div class="row text-center" id="portfolio3">
+                <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Microsoft HoloLens, Unity, C#, JavaScript</strong></h3>
                     <p>Dashboard - A research project aiming to build an educational app on HoloLens that enhances in-class communication to help instructors conduct efficient teaching.</p>
                     <a class="btn btn1 btn2" href="./subpages/dashboard.html">Read More</a>
@@ -328,7 +350,7 @@
                     <img class="pimg" src="imgs/portfolio/hololens1.gif" alt="Loading HoloLens...">
                 </div>
               </div>
-              <div class="row text-center" id="portfolio2">
+              <div class="row text-center" id="portfolio4">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/airome-code.png" alt="Loading Airome...">
                 	<img class="pimg" src="imgs/portfolio/airome0.png" alt="Loading Airome...">
@@ -338,7 +360,7 @@
                     <p>Airome, the smart purifier. This is a web based file system coded for product presentation. The focuse is on optimizing large images/videos to improve performance and building smooth transitions and animations.</p>
                 </div>
               </div>
-              <div class="row text-center" id="portfolio3">
+              <div class="row text-center" id="portfolio5">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Java, PHP, SQL, Android API</strong></h3>
                     <p>Panther Read - a mobile learning app being built to enter the XPrice competition to improve adult literacy. Our group of software engineers are working closely with psychologists and linguists at PITT to create an efficient and incentivized learning process.</p>
@@ -349,7 +371,7 @@
                     <img class="pimg" src="imgs/portfolio/xprice1.png" alt="Loading Panther Read...">
                 </div>
               </div>
-              <div class="row text-center" id="portfolio4">
+              <div class="row text-center" id="portfolio6">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/railway-code.png" alt="Loading Railway...">
                 	<img class="pimg" src="imgs/portfolio/railway0.png" alt="Loading Railway...">
@@ -360,7 +382,7 @@
                     <a class="btn btn1 btn2" href="https://github.com/tic30/CTC-Railway-System-By-RedPanda-Coding/tree/master/src/cn/ctc" target="_blank">See Code in GitHub</a>
                 </div>
               </div>
-              <div class="row text-center" id="portfolio5">
+              <div class="row text-center" id="portfolio7">
                 <div class="col-sm-3 col-md-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                     <h3><strong>HTML, PHP, MySQL, JDBC</strong></h3>
                     <p>FaceSpace - the smiling social network. It features emotion sharing and media streaming. This project is built based on MySQL database with dedicated SQL and Java programming. We use PHP to generate the front end website and mobile applications.</p>
@@ -376,7 +398,7 @@
                     <img class="pimg" src="imgs/portfolio/cross0.gif" alt="Loading CrossUniv...">-->
                 </div>
               </div>
-              <div class="row text-center" id="portfolio6">
+              <div class="row text-center" id="portfolio8">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/mips0.png" alt="Loading MIPS CPU...">
                 	<img class="pimg" src="imgs/portfolio/mips1.png" alt="Loading MIPS CPU...">
@@ -450,7 +472,7 @@
 			</div>
             <div class="row bottomRow">                
                 <div class="self-intro col-md-8 wow fadeInLeft-light" data-wow-delay="0.3s">
-                    <p><span>I</span> am pursuing a career within the scope of web programming(full stack) and interactive computing/UX research. My strength is front end development and prototyping. Meanwhile I am always learning and would love to explore new technology fields.</p>
+                    <p><span>I</span> am pursuing a career within the scope of full stack web programming and interactive computing/UX research. My strength is front end development and prototyping. Meanwhile I am always learning and would love to explore new technology fields.</p>
                     <p><span>A</span>t the moment, I am considering pursuing a degree starting next year. So I am open to <i class="location-highlight">2018 summer internship</i> positions. Meanwhile, if you believe a full-time opportunity strongly fits my skill set, I am flexible with my schedule. In any case, I would love to talk to you more about it. Looking forward to hearing from you!</p>
                 </div>
                 <div class="contact-details-wrapper col-md-4 wow fadeInRight-light" data-wow-delay="0.3s">
