added images to new projects

--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
               <p class="wow animated fadeInUp-light">Code & Outcome Snaps</p>
               <div class="row text-center" id="portfolio1">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
-                	<h3><strong>Python, R</strong></h3>
-                    <p>Moviemotion - A research project...</p>
+                	<h3><strong>Python, R, PyTorch</strong></h3>
+                    <p>Moviemotion - A research project using machine learning to analysis movie sentiment.</p>
                     <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
-                	<img class="pimg-code" src="imgs/portfolio/hololens.jpg" alt="Loading Moviemotion...">
-                    <img class="pimg" src="imgs/portfolio/hololens1.gif" alt="Loading Moviemotion...">
+                	<img class="pimg-code" src="imgs/portfolio/moviemotion-code.png" alt="Loading Moviemotion...">
+                    <img class="pimg" src="imgs/portfolio/moviemotion0.png" alt="Loading Moviemotion...">
                 </div>
               </div>
               <div class="row text-center" id="portfolio2">
@@ -334,9 +334,9 @@
                 	<img class="pimg" src="imgs/portfolio/casey0.png" alt="Loading Casey...">
                 </div>
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
-                	<h3><strong>Chrome Extension, Node/Express, MongoDB Atlas</strong></h3>
-                    <p>Casey - job application assistant software package.</p>
-                    <a class="btn btn1 btn2" href="https://www.xinbeihu.com/jet-hackathon" target="_blank">Read More</a>
+                	<h3><strong>Chrome Extension, Node, MongoDB Atlas</strong></h3>
+                    <p>Casey - job application assistant. The core component of this software package is a Chrome extension that scan through job posting page and extract keywords to reduce reading time for job applicants. It matches required skills with applicants' resume to give application recommendations and tracks applied jobs.</p>
+                    <a class="btn btn1 btn2" href="https://www.xinbeihu.com/jet-hackathon" target="_blank">Research & Design</a>
                 </div>
               </div>
               <div class="row text-center" id="portfolio3">
