--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <div class="row bottomRow">                
                 <div class="self-intro col-md-8 wow fadeInLeft-light" data-wow-delay="0.3s">
                     <p><span>I</span> am pursuing a career within the scope of full stack web programming and interactive computing/UX research. My strength is front end development and prototyping. Meanwhile I am always learning and would love to explore new technology fields.</p>
-                    <p><span>A</span>t the moment, I am considering pursuing a degree starting next year. So I am open to <i class="location-highlight">2018 summer internship</i> positions. Meanwhile, if you believe a full-time opportunity strongly fits my skill set, I am flexible with my schedule. In any case, I would love to talk to you more about it. Looking forward to hearing from you!</p>
+                    <p><span>A</span>t the moment, I am pursuing a master's degree at CMU Silicon Valley campus, major in Software Engineering. So I am open to <i class="location-highlight">2018 summer internship</i> positions. Meanwhile, if you believe a full-time opportunity strongly fits my skill set, I am flexible with my schedule. In any case, I would love to talk to you more about it. Looking forward to hearing from you!</p>
                 </div>
                 <div class="contact-details-wrapper col-md-4 wow fadeInRight-light" data-wow-delay="0.3s">
 					<address class="contact-details">			
