--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="sec2mask original-mask"></div>
             <div class="row">
               <div class="leftimg">
-              	<img src="imgs/portrait.png" alt="Loading Portrait...">
+              	<img src="imgs/portrait3.png" alt="Loading Portrait...">
               </div>
               <div class="aboutright">
               	<h1 class="wow fadeInDown">Who am I?</h1>
@@ -242,7 +242,7 @@
 						<p>I am a detail oriented person who is able to demonstrates exquisite front end products that precisely expresses design language with reusable code. I put efforts in transferring design thinking to the software engineering process through fast prototyping and efficient communication between designers and developers.</p>
 					</div>
 				</div>
-                <i class="fa fa-chevron-up aboutright-up-icon" aria-hidden="true"></i>
+                <!-- <i class="fa fa-chevron-up aboutright-up-icon" aria-hidden="true"></i> -->
               </div>
             </div>
         </div>
@@ -320,7 +320,7 @@
               <div class="row text-center" id="portfolio1">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Python, R, PyTorch</strong></h3>
-                    <p>Moviemotion - A research project using machine learning to analysis movie sentiment.</p>
+                    <p>Moviemotion - A research project that explore new approach to value the movie certificate(currently PG/R/etc.) by movie sentiment analysis with the help of deep learning.</p>
                     <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -358,6 +358,7 @@
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>HTML, CSS, JavaScript, JQuery</strong></h3>
                     <p>Airome, the smart purifier. This is a web based file system coded for product presentation. The focuse is on optimizing large images/videos to improve performance and building smooth transitions and animations.</p>
+                    <a class="btn btn1 btn2" href="tic30.github.io/Airome" target="_blank">Design Presentation</a>
                 </div>
               </div>
               <div class="row text-center" id="portfolio5">
