fixed airome link bug

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>HTML, CSS, JavaScript, JQuery</strong></h3>
                     <p>Airome, the smart purifier. This is a web based file system coded for product presentation. The focuse is on optimizing large images/videos to improve performance and building smooth transitions and animations.</p>
-                    <a class="btn btn1 btn2" href="tic30.github.io/Airome" target="_blank">Design Presentation</a>
+                    <a class="btn btn1 btn2" href="Airome" target="_blank">Design Presentation</a>
                 </div>
               </div>
               <div class="row text-center" id="portfolio5">
