--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
               <div class="row text-center" id="portfolio1">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Python, R, PyTorch</strong></h3>
-                    <p>Moviemotion - A research project that explore new approach to value the movie certificate(currently PG/R/etc.) by movie sentiment analysis with the help of deep learning.</p>
+                    <p>Moviemotion - A research project that explore new approach to value the movie certificate (currently PG/R/etc.) by movie sentiment analysis with the help of deep learning.</p>
                     <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -474,7 +474,7 @@
             <div class="row bottomRow">                
                 <div class="self-intro col-md-8 wow fadeInLeft-light" data-wow-delay="0.3s">
                     <p><span>I</span> am pursuing a career within the scope of full stack web programming and interactive computing/UX research. My strength is front end development and prototyping. Meanwhile I am always learning and would love to explore new technology fields.</p>
-                    <p><span>A</span>t the moment, I am pursuing a master's degree at CMU Silicon Valley campus, major in Software Engineering. So I am open to <i class="location-highlight">2018 summer internship</i> positions. Meanwhile, if you believe a full-time opportunity strongly fits my skill set, I am flexible with my schedule. In any case, I would love to talk to you more about it. Looking forward to hearing from you!</p>
+                    <p><span>A</span>t the moment, I am pursuing a master's degree at CMU Silicon Valley campus, majoring in Software Engineering. Thus I am open to <i class="location-highlight">2018 summer internship</i> positions and <i class="location-highlight">full time positions starting 2019</i>. In either case, if you are a recruiter, I would love to talk to you more about the opportunity. Contact me with any approach listed here if you wish to chat.</p>
                 </div>
                 <div class="contact-details-wrapper col-md-4 wow fadeInRight-light" data-wow-delay="0.3s">
 					<address class="contact-details">			
