routine style update

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 									<i class="fa"><img src="imgs/icons/software.png" class="skillimg" alt=""></i>
 								</div>
 								<h3>General Purpose</h3>
-								<p>Python，Java, C/C#</p>
+								<p>Python, Java, C/C#</p>
 							</div>
 						</div>
 					
@@ -319,8 +319,8 @@
               <p class="wow animated fadeInUp-light">Code & Outcome Snaps</p>
               <div class="row text-center" id="portfolio1">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
-                	<h3><strong>Python, R, PyTorch</strong></h3>
-                    <p>Moviemotion - A research project that explore new approach to value the movie certificate (currently PG/R/etc.) by movie sentiment analysis with the help of deep learning.</p>
+                	<h3><strong>JavaScript, Python, R, PyTorch</strong></h3>
+                    <p>Movie.Emodex - A research project where we explore new application in movie sentiment analysis with the help of deep learning and data visualization methods through web interface.</p>
                     <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -514,7 +514,7 @@
     -->
     
     <footer>
-    	<div>v1.46.17 &nbsp;© Copyright 2016 - 2017 &nbsp;Chu, Tianxin</div>
+    	<div>v1.93.17 &nbsp;© Copyright 2016 - 2017 &nbsp;Chu, Tianxin</div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
