--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         	<img id="chu-logo" src="imgs/icons/chu-logo.png" alt="Loading Logo...">
             <div id="hand"><img src="imgs/icons/hand.png" alt="Loading hand..."></div>
             <img id="smile3" src="imgs/icons/smile.png" alt="Loading smile...">
-            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe" data-toggle="tooltip" data-placement="bottom" title="Now at SIEMENS Corp.">Front End Engineer&nbsp;</span>FROM<span class="sec1-p-span" id="uiux" data-toggle="tooltip" data-placement="bottom" title="@ Mountain View, CA">&nbsp;CMU</span></p>
+            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe" data-toggle="tooltip" data-placement="bottom" title="Now seeking 2018 summer intern.">Front End Engineer&nbsp;</span>FROM<span class="sec1-p-span" id="uiux" data-toggle="tooltip" data-placement="bottom" title="@ Mountain View, CA">&nbsp;CMU</span></p>
         </div>
         <div class="arrow_box"></div>
     </section>
@@ -514,7 +514,7 @@
     -->
     
     <footer>
-    	<div>v1.93.17 &nbsp;© Copyright 2016 - 2017 &nbsp;Chu, Tianxin</div>
+    	<div>v1.93.17 &nbsp;© Copyright 2016 - 2018 &nbsp;Chu, Tianxin</div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
