--- a/index.html
+++ b/index.html
@@ -320,12 +320,13 @@
               <div class="row text-center" id="portfolio1">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Chrome Extension, Solidity</strong></h3>
-                    <p>Ethereum Wallet - A Chrome Extension which enables Ethereum trade. Implementation and security analysis are two focuses for this project.</p>
-                    <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button>
+                    <p>Ethereum Wallet - A Chrome Extension which enables Ethereum trade. Our team focuses on both the implementation and the security analysis to ensure the reliability and usability of our Chrome extension and our smart contract.</p>
+                    <a class="btn btn1 btn2" href="https://docs.google.com/document/d/1eHWPxfec-hE_fyODqD-RaNdRljBPrH-SiIz8F6tzewg/edit?usp=sharing" target="_blank">Research Paper *</a>
+                    <div class="btn-note">* Please contact me for permission.</div>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/crypto-code.png" alt="Loading Moviemotion...">
-                    <img class="pimg" src="imgs/portfolio/moviemotion0.png" alt="Loading Moviemotion...">
+                    <img class="pimg" src="imgs/portfolio/crypto0.png" alt="Loading Moviemotion...">
                 </div>
               </div>
               <div class="row text-center" id="portfolio2">
@@ -336,7 +337,8 @@
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>JavaScript, Python</strong></h3>
                     <p>Collaborative Workflow Workbench - A NASA research project which seeks web-based solution with enhanced UX and optimized performation for web service co-editing, scheduling and execution.</p>
-                    <a class="btn btn1 btn2" href="https://drive.google.com/open?id=1XJakrogt7EhitgJYefcgqgv5E9gfmb4tE2cPHujjp1Q" target="_blank">Research Paper*</a>
+                    <a class="btn btn1 btn2" href="https://docs.google.com/document/d/1XJakrogt7EhitgJYefcgqgv5E9gfmb4tE2cPHujjp1Q/edit?usp=sharing" target="_blank">Research Paper *</a>
+                    <div class="btn-note">* Please contact me for permission.</div>
                 </div>
               </div>
               <div class="row text-center" id="portfolio3">
@@ -531,7 +533,7 @@
     -->
     
     <footer>
-    	<div>For * links, contact me for permission.&nbsp;&nbsp;&nbsp;v1.93.17 &nbsp;© Copyright 2016 - 2018 &nbsp;Chu, Tianxin</div>
+    	<div>v1.93.17 &nbsp;© Copyright 2016 - 2018 &nbsp;Chu, Tianxin</div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
