--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Chrome Extension, Node, MongoDB Atlas</strong></h3>
                     <p>Casey - job application assistant. The core component of this software package is a Chrome extension that scan through job posting page and extract keywords to reduce reading time for job applicants. It matches required skills with applicants' resume to give application recommendations and tracks applied jobs.</p>
-                    <a class="btn btn1 btn2" href="https://www.xinbeihu.com/jet-hackathon" target="_blank">Research & Design</a>
+                    <a class="btn btn1 btn2" href="" disabled>Coming Soon...</a>
                 </div>
               </div>
               <div class="row text-center" id="portfolio5">
