routine style update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Welcome to Tianxin Chu's Homepage! Click in and take a look at my work and experience. If you are a recruiter, a university admission officer or you simply wish to know me, you can find my contact information here to0. I am more than happy to chat!">
     <meta name="keywords" content="tianxin, chu, portfolio, single page, one page, interactive, creative, html5, css3, css3 animation, jquery">
     <meta name="author" content="Tianxin Chu">
-    <title>Tianxin Chu's Homepage</title>
+    <title>Tim Chu's Homepage</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="icon" href="imgs/icons/icon.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -54,7 +54,7 @@
     <div class="sec1nav">
         <ul class="nav-ul">
         	<li class="sec1nav-brand">
-            	<a href="#pageTop" class="local-scroll"><div class="steady">T</div><div class="zoom">ianxin&nbsp;</div><div class="steady">C</div><div class="zoom">hu</div><br/><hr></a>
+            	<a href="#pageTop" class="local-scroll"><div class="steady">T</div><div class="zoom">im&nbsp;</div><div class="steady">C</div><div class="zoom">hu</div><br/><hr></a>
             </li>
         	<li class="nav-img-wrapper"><a href="#chu-menu">
             	<img class="nav-img nav-img1" id="chu-menu" src="imgs/icons/chu-menu.png" alt="Loading menu...">
@@ -277,7 +277,7 @@
 									<i class="fa"><img src="imgs/icons/frame.png" class="skillimg" alt=""></i>
 								</div>
 								<h3>Frameworks</h3>
-								<p>Polymer, Vue, React, Backbone, Angular, Node</p>
+								<p>React/Redux, Polymer, Vue, Backbone, Node</p>
 							</div>
 						</div>
 					
@@ -366,7 +366,7 @@
               <div class="row text-center" id="portfolio5">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Microsoft HoloLens, Unity, C#, JavaScript</strong></h3>
-                    <p>Dashboard - A research project aiming to build an educational app on HoloLens that enhances in-class communication to help instructors conduct efficient teaching.</p>
+                    <p>Intelligent Tutoring Systems - A research project aiming to build an AR application on Microsoft HoloLens that enhances in-class communication to help instructors conduct efficient teaching.</p>
                     <a class="btn btn1 btn2" href="./subpages/dashboard.html">Read More</a>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
