--- a/subpages/dashboard.html
+++ b/subpages/dashboard.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Tianxin's Homepage">
     <meta name="keywords" content="tianxin, chu, portfolio, single page, one page, interactive, creative, html5, css3, css3 animation, jquery">
     <meta name="author" content="Tianxin Chu">
-    <title>Dashboard Project</title>
+    <title>ITS Project - Tim Chu</title>
     <link rel="icon" href="../imgs/icons/icon.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/font-awesome.min.css">
@@ -37,7 +37,7 @@
             <li class="sec1nav-brand">
                 <a href="https://tic30.github.io">
                     <div class="steady">T</div>
-                    <div class="zoom">ianxin&nbsp;</div>
+                    <div class="zoom">im&nbsp;</div>
                     <div class="steady">C</div>
                     <div class="zoom">hu</div><br/>
                     <hr>
@@ -60,7 +60,7 @@
             </div>-->
         </div>
         <div class="dashboardtext">
-            <div class="fadeInDown animated">Dashboard</div>
+            <div class="fadeInDown animated">Intelligent Tutoring Systems</div>
             <span class="fadeInUp animated-forwards-slow">Research Project @ CMU.HCII</span>
         </div>
         <div id="sec1-down" class="chu-down wow mybounce inverted"><img src="../imgs/icons/chu-down.png" alt="Loading down icon..."></div>
@@ -205,7 +205,7 @@
                 <h2 class="">Acknowledgment</h2>
                 <hr class="">
             </div>
-            <p class="content-p" style="margin-bottom: 40px;">I remember the first day when I met <a href="https://www.hcii.cmu.edu/people/kenneth-holstein" target="_blank">Kenneth Holstein</a>, a PhD student at HCII, he described to me about what people do at HCII as “researching about cutting edge and ahead of time technologies that will have huge market impact in the future” and he gave me an example of mobile touchscreen research sponsored by Apple at early 21st century, which was more than five years before the first generation of iPhone hit the market. Looking back at the project I worked on during this short three months, I could not agree more. I appreciate all the guidance and help from <a href="https://www.cs.cmu.edu/~bmclaren/" target="_blank">Dr. Bruce McLaren</a>, <a href="https://www.cs.cmu.edu/~./aleven/" target="_blank">Dr. Vincent Aleven</a> as well as admission and support staffs from HCI Institute. I enjoyed working closely with Kenneth Holstein, <a href="https://zacyu.com/" target="_blank">Zac Yu</a> and all other team members. Finally, I sincerely wish them the best in the future development of Dashboard project.</p>
+            <p class="content-p" style="margin-bottom: 40px;">I remember the first day when I met <a href="https://www.hcii.cmu.edu/people/kenneth-holstein" target="_blank">Kenneth Holstein</a>, a PhD student at HCII, he described to me about what people do at HCII as “researching about cutting edge and ahead of time technologies that will have huge market impact in the future” and he gave me an example of mobile touchscreen research sponsored by Apple at early 21st century, which was more than five years before the first generation of iPhone hit the market. Looking back at the project I worked on during this short three months, I could not agree more. I appreciate all the guidance and help from <a href="https://www.cs.cmu.edu/~bmclaren/" target="_blank">Dr. Bruce McLaren</a>, <a href="https://www.cs.cmu.edu/~./aleven/" target="_blank">Dr. Vincent Aleven</a> as well as admission and support staffs from HCI Institute. I enjoyed working closely with Kenneth Holstein, <a href="https://zacyu.com/" target="_blank">Zac Yu</a> and all other team members. Finally, I sincerely wish them the best in the future development of Intelligent Tutoring Systems project.</p>
             <div class="img-wrapper">
                 <img class="cmu inverted" src="subimgs/cmu.png" alt="Loading img...">
                 <img class="cmu" src="subimgs/hcii.png" alt="Loading img...">
@@ -222,7 +222,7 @@
     <!-- /end of section 8 -->
 
     <footer>
-        <div>© Copyright 2016-2017&nbsp;&nbsp;&nbsp;&nbsp;Chu,Tianxin & CMU HCII</div>
+        <div>© Copyright 2016-2017&nbsp;&nbsp;&nbsp;&nbsp;Chu,Tianxin & CMU HCI Institute</div>
         <div style="font-size: 8px">Some images and videos credit to original owner and/or online publisher. <a href="mailto:chutianxin@gmail.com">Click here</a> to contact Chu for their reference.</div>
     </footer>
     <script src="../js/jquery.js"></script>
