--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>JavaScript, Python, R, PyTorch</strong></h3>
                     <p>Movie.Emodex - A research project where we explore new application in movie sentiment analysis with the help of deep learning and data visualization methods through web interface.</p>
-                    <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button>
+                    <!-- <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button> -->
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/moviemotion-code.png" alt="Loading Moviemotion...">
@@ -360,7 +360,7 @@
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Chrome Extension, Node, MongoDB Atlas</strong></h3>
                     <p>Casey - job application assistant. The core component of this software package is a Chrome extension that scan through job posting page and extract keywords to reduce reading time for job applicants. It matches required skills with applicants' resume to give application recommendations and tracks applied jobs.</p>
-                    <a class="btn btn1 btn2" href="" disabled>Coming Soon...</a>
+                    <!-- <a class="btn btn1 btn2" href="" disabled>Coming Soon...</a> -->
                 </div>
               </div>
               <div class="row text-center" id="portfolio5">
@@ -374,7 +374,7 @@
                     <img class="pimg" src="imgs/portfolio/hololens1.gif" alt="Loading HoloLens...">
                 </div>
               </div>
-              <div class="row text-center" id="portfolio6">
+              <!-- <div class="row text-center" id="portfolio6">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/airome-code.png" alt="Loading Airome...">
                 	<img class="pimg" src="imgs/portfolio/airome0.png" alt="Loading Airome...">
@@ -384,7 +384,7 @@
                     <p>Airome, the smart purifier. This is a web based file system coded for product presentation. The focuse is on optimizing large images/videos to improve performance and building smooth transitions and animations.</p>
                     <a class="btn btn1 btn2" href="Airome" target="_blank">Design Presentation</a>
                 </div>
-              </div>
+              </div> -->
               <!-- <div class="row text-center" id="portfolio5">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Java, PHP, SQL, Android API</strong></h3>
@@ -407,7 +407,7 @@
                     <a class="btn btn1 btn2" href="https://github.com/tic30/CTC-Railway-System-By-RedPanda-Coding/tree/master/src/cn/ctc" target="_blank">See Code in GitHub</a>
                 </div>
               </div> -->
-              <div class="row text-center" id="portfolio7">
+              <!-- <div class="row text-center" id="portfolio7">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Java, PHP, SQL, Android API</strong></h3>
                     <p>Panther Read - a mobile learning app being built to enter the XPrice competition to improve adult literacy. Our group of software engineers are working closely with psychologists and linguists at PITT to create an efficient and incentivized learning process.</p>
@@ -417,7 +417,7 @@
                 	<img class="pimg-code" src="imgs/portfolio/xprice-code.png" alt="Loading Panther Read...">
                     <img class="pimg" src="imgs/portfolio/xprice1.png" alt="Loading Panther Read...">
                 </div>
-              </div>
+              </div> -->
               <div class="row text-center" id="portfolio8">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/mips0.png" alt="Loading MIPS CPU...">
@@ -427,6 +427,13 @@
                 	<h3><strong>VHDL, MIPS, Embedded System</strong></h3>
                     <p>MIPS CPU Design. This is a fully functional MIPS pipelined processor designed and simulated in HDL Designer. We also integrated this CPU into Wishbone bus and tested its performance.</p>
                 </div>
+              </div>
+              <div class="row text-center" id="portfolio9">
+                    <h3><strong>More On the Way!</strong></h3>
+                    <div style="font-size: 20px">
+                        <div class="col-sm-4 col-sm-offset-1"><a style="color: #666; text-decoration: underline !important" href="https://docs.google.com/presentation/d/1Ri520Vwu6EXq8hyOrBHY_iSTnHTL9SjH4pMnIDzkbCQ/edit#slide=id.p" target="_blank">Milu</a> - Gallery Search Engine</div>
+                        <div class="col-sm-5 col-sm-offset-1">FocoBot - Concentration Monitoring System</div>
+                    </div>
               </div>
             </div>
         </div>
