fix animation bug and style update in sidebar

--- a/index.html
+++ b/index.html
@@ -81,26 +81,26 @@
                 </div>
                 <div class="myTable">
                       <div class="row slider-item">
-                      	<div class="td-inner">
-                      		<div class="td-color td-o"></div>
+                      	<div class="td-inner td-o">
+                      		<!-- <div class="td-color td-o"></div> -->
                             <a href="#sec2" class="local-scroll"><img src="imgs/icons/summary.png"><div class="td-words">Summary</div></a>
                         </div>
                       </div>
                       <div class="row slider-item">
-                      	<div class="td-inner">
-                      		<div class="td-color td-b"></div>
+                      	<div class="td-inner td-b">
+                      		<!-- <div class="td-color td-b"></div> -->
                             <a href="#sec4" class="local-scroll"><img src="imgs/icons/portfolio.png"><div class="td-words">Portfolio</div></a>
                         </div>
                       </div>
                       <div class="row slider-item">
-                      	<div class="td-inner">
-                      		<div class="td-color td-r"></div>
+                      	<div class="td-inner td-r">
+                      		<!-- <div class="td-color td-r"></div> -->
                             <a href="#sec5" class="local-scroll"><img src="imgs/icons/contact.png"><div class="td-words">Contacts</div></a>
                       	</div>
                       </div>
                       <div class="row slider-item">
-                      	<div class="td-inner">
-                      		<div class="td-color td-g"></div>
+                      	<div class="td-inner td-g">
+                      		<!-- <div class="td-color td-g"></div> -->
                             <a href="https://drive.google.com/open?id=0B1dSWHM51dn-RGJBNlJZNFdaNW8" target="_blank"><img src="imgs/icons/resume.png"><div class="td-words">Resume</div></a>
                       	</div>
                       </div>
